Handle URL constructor deprecation